--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <section id="blog">
     <div class="">
       <p class="blog-title">blog</p>
-      <p class="desc">check out our blog <u><a href="">here</a></u> to se all of our posts!</p>
+      <p class="desc">check out our blog <u><a href="">here</a></u> to see all of our posts!</p>
     </div>
 
     <div class="posts">
